tests/NormalTests/paczka1/fuzzy1/68959189.err
Error in line 2: zk5scu S72 54,2
Error in line 9: zk5scu A664 12,3
Error in line 8: HEbzPmYkJ A664 20,7
Error in line 7: JiOhw S72 89,4
Error in line 14: RSLT8m2 A664 70,1
Error in line 26: zk5scu S7p p10,9
Error in line 19: rynpc2zyj A884 10,4
Error in line 29: rynpc2zyj S395 33,6
Error in line 39: rynpc2zyj S72 50,45
